# civilization

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-server.yml  release-client.yml  rust.yml
.notes/: spotkanie 30.04
assets/: terrain.ron
assets/units/: archer.ron  cavalry.ron  knight.ron  settler.ron  warrior.ron
client/: Cargo.toml
client/src/: audio.rs  camera.rs  input.rs  lobby.rs  main.rs  ui.rs  visuals.rs
client/src/visuals/: cities.rs  hexes.rs  theme.rs  units.rs
docs/superpowers/specs/: 2026-04-14-multiplayer-hex-grid-prototype-design.md  2026-05-04-unit-action-menu-design.md  2026-05-08-combat-system-design.md  2026-05-09-unique-starting-positions-design.md
game-design/: rules.md
scripts/: build_web_client.sh  generate_team_masks.py
server/: Cargo.toml
server/src/: cities.rs  cities_systems.rs  combat.rs  main.rs  map_config.rs  map_gen.rs  players.rs  turn.rs
server/src/combat/: algorithm.rs  systems.rs  types.rs
shared/: Cargo.toml
shared/src/: assets.rs  cities.rs  components.rs  events.rs  hex.rs  lib.rs  map_settings.rs  net.rs  plugin.rs  production.rs  terrain.rs  tiles.rs  unit_definition.rs  units.rs
web-client/: client.js  index.html
