[package]
name = "client"
version = "0.1.0"
edition = "2024"

[features]
# Connect to the deployed server over TLS WebSocket (wss://, fronted by Caddy)
# instead of plain ws:// on localhost. Used by the Pages deploy build.
wss = []

[dependencies]
bevy.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet2.workspace = true
shared = { path = "../shared" }
getrandom.workspace = true
# std::time::SystemTime::now() panics on wasm32-unknown-unknown (no system clock).
# web-time is a drop-in that uses the browser clock on wasm and re-exports std on native.
web-time = "1"

# Desktop clients use the native UDP transport.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_replicon_renet2 = { workspace = true, features = ["native_transport"] }

# Browser clients can't speak UDP, so the wasm build connects over a WebSocket.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_replicon_renet2 = { workspace = true, features = ["ws_client_transport"] }
url = "2"
