[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
# Front the WebSocket socket with a TLS-terminating proxy (Caddy) for wss:// clients.
# Tells netcode TLS handles encryption and uses the dummy address for domain clients.
wss = []

[dependencies]
bevy.workspace = true
bevy_replicon.workspace = true
bevy_replicon_renet2 = { workspace = true, features = ["native_transport", "ws_server_transport"] }
shared = { path = "../shared" }
rand = "0.8"
# WebSocket server transport runs its accept/read/write loops on a tokio runtime.
tokio = { version = "1", features = ["rt-multi-thread"] }
# Coherent elevation/moisture fields for banded terrain; seeded by a u32 so the
# map reproduces across process runs (see map_gen.rs determinism guarantee).
noise = "0.9"
